[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/diagraph/nodes/BaseNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/diagraph/nodes/SpeechNode.gd" type="Script" id=2]
[ext_resource path="res://addons/diagraph/nodes/Choice.gd" type="Script" id=3]
[ext_resource path="res://addons/diagraph/nodes/TextEdit.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Image" id=8]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 224, 224, 224, 0, 224, 224, 224, 0, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 180, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 180, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 0, 224, 224, 224, 0, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 168, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 168, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 214, 214, 214, 0, 214, 214, 214, 19, 223, 223, 223, 234, 223, 223, 223, 234, 214, 214, 214, 19, 214, 214, 214, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 217, 217, 217, 0, 221, 221, 221, 84, 221, 221, 221, 84, 217, 217, 217, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 221, 221, 221, 0, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=7]
flags = 0
flags = 0
image = SubResource( 8 )
size = Vector2( 16, 16 )

[node name="1" instance=ExtResource( 1 )]
margin_right = 400.0
margin_bottom = 400.0
slot/0/left_enabled = true
slot/0/right_enabled = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 0, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 0.27, 0, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 0, 1, 0, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 0, 1 )
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )

[node name="Body" parent="." index="0"]
margin_right = 389.0
margin_bottom = 396.0

[node name="Title" parent="Body/Toolbar" index="1"]
margin_right = 344.0
text = "Speech"

[node name="Edit" parent="Body/Toolbar" index="2"]
margin_left = 351.0
margin_right = 367.0
items = [ "Choices", null, 1, false, false, 0, 0, null, "", false ]

[node name="Close" parent="Body/Toolbar" index="3"]
margin_left = 374.0
margin_right = 390.0

[node name="Text" type="VBoxContainer" parent="Body" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Body/Text" index="0"]
margin_right = 378.0
margin_bottom = 369.0
size_flags_horizontal = 3
size_flags_vertical = 3
syntax_highlighting = true
show_line_numbers = true
highlight_all_occurrences = true
wrap_enabled = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceTitles" type="HBoxContainer" parent="Body/Text" index="1"]
visible = false
margin_top = 198.0
margin_right = 378.0
margin_bottom = 229.0

[node name="Choice" type="Label" parent="Body/Text/ChoiceTitles" index="0"]
margin_right = 171.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Choice"

[node name="Condition" type="Label" parent="Body/Text/ChoiceTitles" index="1"]
margin_left = 175.0
margin_right = 346.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Condition"

[node name="Spacer" type="Control" parent="Body/Text/ChoiceTitles" index="2"]
margin_left = 350.0
margin_right = 378.0
margin_bottom = 31.0
rect_min_size = Vector2( 28, 0 )

[node name="Choice1" type="HBoxContainer" parent="." index="1"]
visible = false
margin_left = 11.0
margin_top = 284.0
margin_right = 389.0
margin_bottom = 309.0
script = ExtResource( 3 )

[node name="Choice" type="LineEdit" parent="Choice1" index="0"]
margin_right = 177.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Condition" type="LineEdit" parent="Choice1" index="1"]
margin_left = 181.0
margin_right = 359.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Menu" type="MenuButton" parent="Choice1" index="2"]
visible = false
margin_left = 333.0
margin_right = 359.0
margin_bottom = 25.0
focus_mode = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "1"
icon = SubResource( 7 )
items = [ "Add Choice", null, 0, false, false, 0, 0, null, "", false, "test2", null, 0, false, false, 1, 0, null, "", false ]

[node name="Label" type="Label" parent="Choice1" index="3"]
margin_left = 363.0
margin_right = 378.0
margin_bottom = 25.0
text = "1"

[node name="Choice2" type="HBoxContainer" parent="." index="2"]
visible = false
margin_left = 11.0
margin_top = 313.0
margin_right = 389.0
margin_bottom = 338.0
script = ExtResource( 3 )

[node name="Choice" type="LineEdit" parent="Choice2" index="0"]
margin_right = 177.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Condition" type="LineEdit" parent="Choice2" index="1"]
margin_left = 181.0
margin_right = 359.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Menu" type="MenuButton" parent="Choice2" index="2"]
visible = false
margin_left = 350.0
margin_right = 378.0
margin_bottom = 31.0
focus_mode = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "2"
icon = SubResource( 7 )
items = [ "Add Choice", null, 0, false, false, 0, 0, null, "", false, "test2", null, 0, false, false, 1, 0, null, "", false ]

[node name="Label" type="Label" parent="Choice2" index="3"]
margin_left = 363.0
margin_right = 378.0
margin_bottom = 25.0
text = "2"

[node name="Choice3" type="HBoxContainer" parent="." index="3"]
visible = false
margin_left = 11.0
margin_top = 342.0
margin_right = 389.0
margin_bottom = 367.0
script = ExtResource( 3 )

[node name="Choice" type="LineEdit" parent="Choice3" index="0"]
margin_right = 177.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Condition" type="LineEdit" parent="Choice3" index="1"]
margin_left = 181.0
margin_right = 359.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Menu" type="MenuButton" parent="Choice3" index="2"]
visible = false
margin_left = 350.0
margin_right = 378.0
margin_bottom = 31.0
focus_mode = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "3"
icon = SubResource( 7 )
items = [ "Add Choice", null, 0, false, false, 0, 0, null, "", false, "test2", null, 0, false, false, 1, 0, null, "", false ]

[node name="Label" type="Label" parent="Choice3" index="3"]
margin_left = 363.0
margin_right = 378.0
margin_bottom = 25.0
text = "3"

[node name="Choice4" type="HBoxContainer" parent="." index="4"]
visible = false
margin_left = 11.0
margin_top = 371.0
margin_right = 389.0
margin_bottom = 396.0
script = ExtResource( 3 )

[node name="Choice" type="LineEdit" parent="Choice4" index="0"]
margin_right = 177.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Condition" type="LineEdit" parent="Choice4" index="1"]
margin_left = 181.0
margin_right = 359.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Menu" type="MenuButton" parent="Choice4" index="2"]
visible = false
margin_left = 352.0
margin_right = 378.0
margin_bottom = 25.0
focus_mode = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "4"
icon = SubResource( 7 )
items = [ "Add Choice", null, 0, false, false, 0, 0, null, "", false, "test2", null, 0, false, false, 1, 0, null, "", false ]

[node name="Label" type="Label" parent="Choice4" index="3"]
margin_left = 363.0
margin_right = 378.0
margin_bottom = 25.0
text = "4"

[node name="Control" type="Control" parent="." index="5"]
margin_left = 11.0
margin_top = 400.0
margin_right = 389.0
margin_bottom = 400.0
